# ambiance

./: .gitignore  README.md  index.html  noisetown_ADV_CHORD_PATCHED_v4g1_applyfix.html  package.json  pyproject.toml
Carla-main/data/: update-dpf
Carla-main/source/modules/dgl/: Makefile
Carla-main/source/modules/water/: common.hpp  water.h
JUCE-master/: .gitignore  CHANGE_LIST.md  CMakeLists.txt
JUCE-master/examples/Audio/: AudioRecordingDemo.h  CapabilityInquiryDemo.h
JUCE-master/examples/DemoRunner/: DemoRunner.jucer
JUCE-master/examples/DemoRunner/JuceLibraryCode/: JuceHeader.h
JUCE-master/examples/GUI/: AccessibilityDemo.h  FontFeaturesDemo.h  FontsDemo.h  GraphicsDemo.h  LineSpacingDemo.h
JUCE-master/extras/AudioPerformanceTest/: AudioPerformanceTest.jucer
JUCE-master/extras/AudioPluginHost/: AudioPluginHost.jucer
JUCE-master/extras/Projucer/: Projucer.jucer
JUCE-master/extras/Projucer/JuceLibraryCode/: JuceHeader.h
JUCE-master/extras/UnitTestRunner/: UnitTestRunner.jucer
JUCE-master/modules/juce_analytics/: juce_analytics.h
JUCE-master/modules/juce_animation/: juce_animation.h
JUCE-master/modules/juce_audio_basics/: juce_audio_basics.h
JUCE-master/modules/juce_audio_basics/buffers/: juce_AudioDataConverters.h
JUCE-master/modules/juce_audio_basics/midi/: juce_MidiBuffer.h  juce_MidiMessage.h
JUCE-master/modules/juce_audio_devices/: juce_audio_devices.h
JUCE-master/modules/juce_audio_devices/audio_io/: juce_AudioDeviceManager.cpp  juce_AudioDeviceManager.h  juce_AudioIODeviceType.h
JUCE-master/modules/juce_audio_devices/midi_io/: juce_MidiDevices.h
JUCE-master/modules/juce_audio_formats/: juce_audio_formats.h
JUCE-master/modules/juce_audio_formats/codecs/: juce_AiffAudioFormat.cpp  juce_FlacAudioFormat.cpp  juce_OggVorbisAudioFormat.cpp  juce_WavAudioFormat.cpp  juce_WavAudioFormat.h  juce_WindowsMediaAudioFormat.cpp
JUCE-master/modules/juce_audio_plugin_client/: juce_audio_plugin_client.h  juce_audio_plugin_client_AAX.cpp  juce_audio_plugin_client_AU_1.mm  juce_audio_plugin_client_AUv3.mm  juce_audio_plugin_client_VST2.cpp  juce_audio_plugin_client_VST3.cpp
JUCE-master/modules/juce_audio_plugin_client/VST3/: juce_VST3ManifestHelper.cpp  juce_VST3ModuleInfo.h
JUCE-master/modules/juce_audio_processors/: juce_audio_processors.cpp  juce_audio_processors.h
JUCE-master/modules/juce_audio_processors/format_types/: juce_AU_Shared.h  juce_AudioUnitPluginFormat.mm  juce_LV2PluginFormat.cpp  juce_LV2Resources.h  juce_LegacyAudioParameter.cpp  juce_VST3Common.h  juce_VST3Headers.h  juce_VST3PluginFormat.cpp  juce_VST3PluginFormat.h  juce_VST3PluginFormat_test.cpp  juce_VSTMidiEventList.h
JUCE-master/modules/juce_audio_processors/processors/: juce_AudioPluginInstance.h  juce_AudioProcessor.cpp  juce_AudioProcessor.h  (+2 more)
JUCE-master/modules/juce_audio_utils/: juce_audio_utils.h
JUCE-master/modules/juce_box2d/: juce_box2d.h
JUCE-master/modules/juce_core/: juce_core.h
JUCE-master/modules/juce_cryptography/: juce_cryptography.h
JUCE-master/modules/juce_data_structures/: juce_data_structures.h
JUCE-master/modules/juce_dsp/: juce_dsp.h
JUCE-master/modules/juce_events/: juce_events.h
JUCE-master/modules/juce_graphics/: juce_graphics.cpp  juce_graphics.h
JUCE-master/modules/juce_gui_basics/: juce_gui_basics.h
JUCE-master/modules/juce_gui_extra/: juce_gui_extra.h
JUCE-master/modules/juce_javascript/: juce_javascript.h
JUCE-master/modules/juce_midi_ci/: juce_midi_ci.h
JUCE-master/modules/juce_opengl/: juce_opengl.h
JUCE-master/modules/juce_osc/: juce_osc.h
JUCE-master/modules/juce_product_unlocking/: juce_product_unlocking.h
JUCE-master/modules/juce_video/: juce_video.h
cpp/juce_host/: CMakeLists.txt
cpp/juce_host/src/: Main.cpp
data/vst_ui/: aspen_trumpet_1.json
data/vsts/aspen_trumpet_1/: plugin_metadata.json
docs/: carla_windows.md  vst3_hosting.md
flutter_vst3-main/dart_vst_host/: pubspec.yaml
flutter_vst3-main/dart_vst_host/native/: CMakeLists.txt
included_plugins/Harmonical/: readme.htm
included_plugins/scrooo64/: release_notes.txt  scrooo_license.txt
jack2-1.9.22/windows/: JackMMCSS.cpp  JackMMCSS.h  JackWinServerLaunch.cpp  README  jackaudioadapter.rc  jackdummydriver.rc  jackloopbackdriver.rc  jacknetdriver.rc  jacknetmanager.rc  jacknetonedriver.rc  jackportaudio.rc  jackwinmme.rc  libjacknet.rc  libjackserver.rc
project/: CMakeLists.txt  README.md
project/src/: GainProcessor.cpp  GainProcessor.h  Main.cpp  MainComponent.cpp  MainComponent.h  Paths.h  Session.cpp  Session.h
scripts/: app.js  mod-apply.js  mods-advanced.js  toolbar.js  tools.js
src/ambiance/: __init__.py  cli.py  npcompat.py  server.py  simple_numpy.py
src/ambiance/core/: base.py  engine.py  registry.py
src/ambiance/effects/: flutter_vst.py  spatial.py
src/ambiance/integrations/: carla_host.py  external_apps.py  flutter_vst_host.py  juce_vst3_host.py  plugins.py
src/ambiance/sources/: basic.py  integrated.py
src/ambiance/utils/: audio.py
styles/: main.css
tests/: test_audio_utils.py  test_carla_host.py  test_engine.py  test_external_apps.py  test_juce_host.py  test_plugins.py  test_server.py  test_vst_host.py
(+152 files in other folders)
