[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ambiance"
version = "0.1.0"
description = "Modular audio generation and integration toolkit"
readme = "README.md"
authors = [{name = "Ambiance Contributors"}]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
cli = ["typer>=0.9.0"]
numpy = ["numpy>=1.21"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = [
    "Carla-main",
    "jack2-1.9.22",
    "pycarla-master",
    "vsthost_1.16_source",
]
